# BrAInwave-2.0-Project

./: .gitignore  README.md  push_frontend.sh  start.sh  stop.sh
Frontend/: .env.example  .env.production  INTERFACES.md  README.md  SETUP_COMPLETE.md  index.html  package-lock.json  package.json
Frontend/src/: App.tsx
Frontend/src/components/: ActionLog.tsx  ActionPanel.tsx  ComparisonChart.tsx  FeatureCards.tsx  Footer.tsx  MapView.tsx  MetricsBar.tsx  Navbar.tsx  ResourceLayer.tsx  RewardChart.tsx  SimulationPlayer.tsx  SmokeTest.tsx  StateVisualization.tsx  TechStack.tsx  ZoneLayer.tsx
Frontend/src/data/: demoResources.json  demoScenario.json  demoTrajectory.json  demoZones.json
Frontend/src/examples/: apiUsage.tsx
Frontend/src/pages/: Landing.tsx  LiveSimulationView.tsx  Report.tsx  Results.tsx  ScenarioSetup.tsx  Simulation.tsx
Frontend/src/services/: api.ts
Frontend/src/styles/: FeatureCards.css  Footer.css  Landing.css  Navbar.css  TechStack.css  global.css  maplibre.css
Frontend/src/tests/: contractVerification.ts
Frontend/src/types/: simulation.ts
Frontend/src/utils/: colorScales.ts  mapStyles.ts  relicDerivations.ts  reportGenerator.ts
sim/: Dockerfile  README.md  pyproject.toml  requirements.txt
sim/src/: __init__.py  main.py
sim/src/app/: __init__.py  api.py  dependencies.py  main.py
sim/src/app/routers/: env_router.py
sim/src/envs/: __init__.py  delhi_evacuation_env.py
sim/src/models/: __init__.py
sim/src/rl/: __init__.py  train.py
sim/tests/: conftest.py  test_api.py  test_env.py
