[tool.poetry]
name = "sim"
version = "0.1.0"
description = "Delhi earthquake evacuation reinforcement learning project"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
gymnasium = "^0.21.0"
stable-baselines3 = "^1.6.0"
numpy = "^1.21.0"
networkx = "^2.6.3"
pydantic = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"